force-app/main/default/objects/Course__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fee__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Duration</valueSetName>
    </valueSet>
</CustomField>