force-app/main/default/objects/Course__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100000</fullName>
            </value>
            <value>
                <fullName>250000</fullName>
            </value>
            <value>
                <fullName>300000</fullName>
            </value>
            <value>
                <fullName>400000</fullName>
            </value>
            <value>
                <fullName>25000</fullName>
            </value>
            <value>
                <fullName>35000</fullName>
            </value>
            <value>
                <fullName>50000</fullName>
            </value>
            <value>
                <fullName>70000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>