force-app/main/default/objects/Course__c/fields/StudentCount__c.field-meta.xml
<CustomField>
    <fullName>StudentCount__c</fullName>
    <label>Student Count</label>
    <summaryForeignKey>Student__c.MDRCourse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>