force-app/main/default/objects/Course__c/fields/TotalFee__c.field-meta.xml
<CustomField>
    <fullName>TotalFee__c</fullName>
    <label>Total Fee</label>
    <summarizedField>Student__c.Fee__c</summarizedField>
    <summaryForeignKey>Student__c.MDRCourse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>